test/e2e/invalid/larger_int.mylang
{define imut x of int8 = 256;}
